[gd_scene load_steps=10 format=2]

[ext_resource path="res://items/item.tscn" type="PackedScene" id=1]
[ext_resource path="res://items/overlay_door/overlay_door.gd" type="Script" id=2]
[ext_resource path="res://game_over/background.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 288 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://BluuNext-Bold.otf"

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = SubResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://BluuNext-Bold.otf"

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = SubResource( 2 )

[node name="OverlayDoor" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="OverlayBackground" type="Sprite" parent="." index="0"]
modulate = Color( 1, 1, 1, 0.921569 )
position = Vector2( 512, 288 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 512, 288 )
shape = SubResource( 1 )

[node name="SpinBox" type="SpinBox" parent="." index="3"]
margin_left = 208.0
margin_top = 256.0
margin_right = 354.0
margin_bottom = 325.0
theme = SubResource( 6 )
max_value = 9.0
align = 1

[node name="SpinBox2" type="SpinBox" parent="." index="4"]
margin_left = 360.0
margin_top = 256.0
margin_right = 506.0
margin_bottom = 325.0
theme = SubResource( 6 )
max_value = 9.0
align = 1

[node name="SpinBox3" type="SpinBox" parent="." index="5"]
margin_left = 520.0
margin_top = 256.0
margin_right = 666.0
margin_bottom = 325.0
theme = SubResource( 6 )
max_value = 9.0
align = 1

[node name="SpinBox4" type="SpinBox" parent="." index="6"]
margin_left = 680.0
margin_top = 256.0
margin_right = 826.0
margin_bottom = 325.0
theme = SubResource( 6 )
max_value = 9.0
align = 1

[node name="Button" type="Button" parent="." index="7"]
margin_left = 448.0
margin_top = 368.0
margin_right = 576.0
margin_bottom = 409.0
text = "UNLOCK"

[node name="Label" type="Label" parent="." index="8"]
margin_left = 288.0
margin_top = 168.0
margin_right = 747.0
margin_bottom = 217.0
custom_colors/font_color = Color( 0.592157, 0.494118, 0.301961, 1 )
custom_fonts/font = SubResource( 3 )
text = "Enter four digit passcode"
align = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
